# sharp-smart-humidifier

./: .clang-format  .gitignore  .prettierignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: flake-check.yaml  update-flake-lock.yaml
firmware/: .base.yaml  .led_sensor.yaml  README.md  humidifier_s2.yaml
firmware/esphome_components/sharp_hv_r75_common/: __init__.py  common.h
firmware/esphome_components/sharp_hv_r75_operating_mode/: __init__.py  operating_mode.cpp  operating_mode.h
firmware/esphome_components/sharp_hv_r75_operating_mode_control/: __init__.py  operating_mode_control.cpp  operating_mode_control.h
firmware/esphome_components/sharp_hv_r75_operating_mode_select/: __init__.py  operating_mode_select.cpp  operating_mode_select.h
firmware/esphome_components/sharp_hv_r75_water_level/: __init__.py  water_level.cpp  water_level.h
ha_component/: hacs.json  pyproject.toml
ha_component/custom_components/sharp_smart_humidifier/: __init__.py  const.py  humidifier.py  manifest.json
hardware/: README.md  leds_to_controller_mapping.txt
hardware/easyada/: PCB_Smartizator.json  SCH_Smartizator.json
