[project]
name = "sharp-smart-humidifier-component"
version = "0.1.0"
description = "Custom Home Assistant component for Sharp HV-R75 Smart Humidifier"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2025.4.4",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
